--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,12 @@
     <description>Academics</description>
     <properties>
         <java.version>17</java.version>
+        <start-class>
+            com.example.academics.AcademicsApplication
+        </start-class>
     </properties>
+
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -75,12 +80,10 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <source>15</source>
-                    <target>15</target>
+                    <mainClass>com.example.academics.AcademicsApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
